# asyncdagpi

./: .coverage  .flake8  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  codecov.yml  documentation.md  pyproject.toml  setup.py  test.py
.github/workflows/: coverage.yml  pypi.yml
asyncdagpi/: Image.py  __init__.py  client.py  errors.py  exceptions.py  http.py  image.py  image_features.py  objects.py
asyncdagpi/objects/: __init__.py  logo.py  pickupline.py  wtp.py
docs/: changelog.rst  conf.py  data.rst  exceptions.rst  image.rst  index.rst  library.rst  quickstart.rst
docs/extensions/: builder.py  details.py  exceptions.rst
tests/: test_asyncdagpi.py
