[tool.poetry]
name = "asyncdagpi"
version = "3.3.0"
description = "An Asynchronos API wrapper for https://dagpi.xyz"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Daggy1234/asyncdagpi"
authors = ["Daggy1234 <daggy@daggy.tech>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Pillow = "^8.0.0"
Sphinx = "^3.2.1"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"
sphinx-bootstrap-theme = "^0.7.1"
pytest-cov = "^2.10.1"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
