[tool.poetry]
name = "asyncdagpi"
version = "4.1.3"
description = "An Asynchronos API wrapper for https://dagpi.xyz"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Daggy1234/asyncdagpi"
authors = ["Daggy1234 <daggy@daggy.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
Pillow = "^9.0.0"
Sphinx = "^4.2.0"
flake8 = "^4.0.0"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0"
autopep8 = "^1.6.0"
sphinx-press-theme = "^0.8.0"

[tool.pyright]
reportUnnecessaryIsInstance=false

[tool.autopep8]
max_line_length = 120
ignore = ["W605"]
in-place = true
recursive = true

#  poetry run autopep8 --in-place --max-line-length 120 --ignore W605 --aggressive --aggressive --experimental  --recursive asyncdagpi

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
